* [Bug 634] Re-instantiate syslog() and logfiles after the daemon fork.
* [Bug 952] Use md5 code with a friendlier license.
* [Bug 977] Fix mismatching #ifdefs for builds without IPv6.
* [Bug 830] Fix the checking order of the interface options.
* Clean up the logfile/syslog setup.
* [Bug 970] Lose obsolete -g flag to ntp-keygen.
* The -e flag to ntp-keygen can write GQ keys now, too.
* ntp_proto.c: sys_survivors and hpoll cleanup from Dave Mills.
* ntp_loopfilter.c: sys_poll cleanup from Dave Mills.
* refclock_wwv.c: maximum-likelihood digit and DSYNC fixes from Dave Mills.
* [Bug 967] preemptable associations are lost forever on a step.
* ntp_config.c: [CID 48] missing "else" clause.
* [Bug 833] ntpq config keyword is quote-mark unfriendly.
* Rename the ntpq "config" keyword to ":config".
* Dave Mills shifted some orphan processing.
* Fix typos in the [Bug 963] patch.
* bootstrap: squawk if genver fails.  Use -f with cp in case Dave does a chown.
* Remove obsolete simulator command-line options.
* ntp_request.c: [CID 36] zero sin_zero.
* [Bug 963] get_systime() is too noisy.
* [Bug 960] spurious syslog:crypto_setup:spurious crypto command
* [Bug 964] Change *-*-linux* to *-*-*linux* to allow for uclinux.
* Changes from Dave Mills:
  - ntp_util.c: cleanup.
  - ntp_timer.c: watch the non-burst packet rate.
  - ntp_request.c: cleanup.
  - ntp_restrict.c: RES_LIMITED cleanup.
  - ntp_proto.c: RES_LIMITED, rate bucktes, counters, overall cleanup.
  - ntp_peer.c: disallow peer_unconfig().
  - ntp_monitor.c: RES_LIMITED cleanup.
  - ntp_loopfilter.c: poll interval cleanup.
  - ntp_crypto.c: volley -> retry.  Cleanup TAI leap message.
  - ntp_config: average and minimum are ^2 values.
  - ntpdc: unknownversion is really "declined", not "bad version".
  - Packet retry cleanup.
* [Bug 961] refclock_tpro.c:tpro_poll() calls refclock_receive() twice.
* [Bug 957] Windows only: Let command line parameters from the Windows SCM GUI